--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ language: bash
 before_install:
   - curl https://raw.githubusercontent.com/express42/otus-homeworks/2019-02/run.sh | bash
 notifications:
-  slack: amigostarist:cgdp0Sg8zaDyKEwlsJ9Ct1LT
+  slack: 
